# mofo-repo

./: .gitignore  README.md
.github/workflows/: release.yml
mofoMojoVst/: CMakeLists.txt  Mofo Filter.jucer  entitlements.plist
mofoMojoVst/Source/: EnvelopeProcessor.h  Knob.cpp  Knob.h  MagicKnob.cpp  MagicKnob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SIMDLadderFilter.cpp  SIMDLadderFilter.h
mofoMojoVst/Source/modules/dsp/: EnvelopeProcessor.h  maths.h
mofoMojoVst/Source/modules/licensing/: SoftwareLicensorStatus.cpp  SoftwareLicensorStatus.h  SoftwareLicensorUnlockForm.cpp
rust_simd/: Cargo.toml  bench_optimized.sh  bench_unoptimized.sh  test.sh
rust_simd/benches/: simd.rs
rust_simd/src/: bias.rs  envelope.rs  lib.rs  simd.rs
