[package]
name = "simd_tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "simd"
harness = false

[profile.bench]
opt-level = 3
debug = 0
debug-assertions = false
lto = "thin"